# utsk_intelligent_sales

./: .gitignore  setup_project.sh
.github/workflows/: ci.yml  deploy-web.yml  release.yml  test.yml
SQL/: 01_extend_products.sql  02_parse_function.sql  03_fill_dimensions.sql  04_similarities.sql  05_import_1c_csv.sql  06_generate_links.sql  backup.sh  backup_bd_intelligent_sales_20260427_094313.sql  clients.csv  documents.csv  import_utsk_data.sh  nomenclature_from_1c.csv  products.csv  sales_lines.csv  setup_database_extended.sh  sql_create  sql_shema
utsk_intelligent_sales/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  apply_fixes.sh  setup_part2.sh  setup_services.sh  setup_ui.sh
utsk_intelligent_sales/.github/workflows/: ci.yml  web-tests.yml
utsk_intelligent_sales/cmake/: CompilerOptions.cmake
utsk_intelligent_sales/config/: db_config.example.json
utsk_intelligent_sales/docker/: .env.example  docker-compose.yml
utsk_intelligent_sales/docs/: CHANGELOG.md
utsk_intelligent_sales/include/core/: Config.hpp  Database.hpp  Logger.hpp
utsk_intelligent_sales/include/models/: ActivityDirection.hpp  Client.hpp  Document.hpp  Product.hpp  SaleLine.hpp  StatusRule.hpp
utsk_intelligent_sales/include/services/: AnalyticsService.hpp  ClientService.hpp  ProductService.hpp  RecommendationService.hpp
utsk_intelligent_sales/include/ui/: ConsoleMenu.hpp  ConsoleUI.hpp  TablePrinter.hpp
utsk_intelligent_sales/src/: main_console.cpp
utsk_intelligent_sales/src/core/: Config.cpp  Database.cpp  Logger.cpp
utsk_intelligent_sales/src/models/: ActivityDirection.cpp  Client.cpp  Document.cpp  Product.cpp  SaleLine.cpp  StatusRule.cpp
utsk_intelligent_sales/src/services/: AnalyticsService.cpp  ClientService.cpp  ProductService.cpp  RecommendationService.cpp
utsk_intelligent_sales/src/ui/: ConsoleMenu.cpp  ConsoleUI.cpp  TablePrinter.cpp
utsk_intelligent_sales/tests/: CMakeLists.txt
utsk_intelligent_sales/tests/unit/: test_database.cpp
utsk_web/: start_web.sh  stop_web.sh
utsk_web/backend/: app.py  requirements.txt
utsk_web/docker/: Dockerfile  docker-compose.yml
utsk_web/frontend/static/: db_reference.html  index.html  plan.html
utsk_web/tests/: conftest.py  test_api.py  test_integration.py
